# zgdk

./: .codecov.yml  .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  .pylintrc  .taskmaster.json  .yamllint  ARCHITECTURE.md  CLAUDE.md  CLEANUP_AND_TESTING_PLAN.md  DEPLOYMENT_GUIDE.md  DOCKER.md  Dockerfile  Dockerfile.monitor  Dockerfile.poetry  INTERPRETABILITY_GUIDE.md  LARGE_FILE_REFACTOR_PLAN.md  MCP_INTEGRATION.md  MODERATION_LOG_IMPLEMENTATION.md  Makefile  OPTIMAL_POINT_SYSTEM.md  POETRY_LOCK_NOTE.md  PROJECT_STRUCTURE.md  README.md  REFACTORING_PLAN.md  REORGANIZATION_COMPLETE.md  SHOP_REFACTOR_ANALYSIS.md  SHOP_REFACTOR_PLAN.md  TESTING_GUIDE.md  config.yml  constants.py  debug_roles.py  docker-compose.dev.yml  docker-compose.mcp.yml  docker-compose.monitoring.yml  docker-compose.override.yml  (+30 more)
.github/: README.md
.taskmaster/: config.json  current-task.md  tasks.json
agent_builder/: README.md  __init__.py  cli.py  core.py  factory.py  monitor.py  templates.py
agents/: health_server.py  support_agent.py
argocd/: support-agents-app.yaml  zgdk-bot-app.yaml
core/: __init__.py  base_cog.py  base_view.py  error_handler.py  unit_of_work.py
datasources/: models.py  queries.py
docker/: README.md  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.mcp.yml  docker-compose.override.yml
docs/: AI_INTERPRETABILITY.md  KUBERNETES_DEPLOYMENT.md  KUBERNETES_GUIDE.md  KUBERNETES_HEALTH_CHECKS.md  README.md  UNIT_OF_WORK.md  admin_dashboard_concept.md  dependency_resolution_summary.md  django_admin_vs_custom.md  django_htmx_implementation.md  ecommerce_platform_concept.md  python_ecommerce_architecture.md  role_service_migration.md  stripe_integration_best_practices.md  unified_architecture.md
examples/: unit_of_work_example.py
k8s/: namespace.yaml  zgdk-deployment-backup.yaml
logs/: command_test_report.txt  fixed_errors.json
mcp/: mcp_client_example.py  zgdk_mcp_server.py
monitoring/: config.yml  monitor.py  notify.py  setup.sh  start_monitor.sh  status_server.py  zgdk-monitor.service
scripts/: README.md  argocd-setup.sh  canary-deploy.sh  deploy-agents.sh  deploy-to-k8s.sh  install-k3s.sh  k8s-manage.sh  rollback-agents.sh  verify-cicd.sh  verify-pipeline.sh
services/: ai_agent.py
test_live_bot/: README.md  comprehensive_shop_test.py  interactive_shop_test.py  live_commands_test.py  run_interactive_shop_test.sh  run_shop_tests.sh  run_simple_shop_test.sh  run_test.sh  run_test_with_logs.sh  simple_shop_test.py
tests/: README.md  config.py  conftest.py  pytest.ini  run_tests.py  test_basic_functionality.py  test_cog_info.py  test_cog_voice.py  test_config.py  test_delete_role.py  test_event_on_ready.py  test_gender_commands.py  test_gender_commands_enhanced.py  test_gender_commands_simple.py  test_mute_manager.py  test_mute_type.py  test_role_manager.py  test_role_manager_performance.py  test_role_sale.py  test_team_commands.py  test_team_manager.py  utils.py
utils/: __init__.py  browser_manager.py  (+25 more)
(+442 files in other folders)
