[tool.poetry]
name = "zgdk"
version = "0.1.0"
description = "zaGadka Discord Bot"
authors = ["zaGadka Team"]
readme = "README.md"
packages = [{include = "cogs"}, {include = "core"}, {include = "datasources"}, {include = "utils"}]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "2.3.2"
PyYAML = "6.0.2"
PyNaCl = "1.5.0"
python-dotenv = "1.0.0"
httpx = "0.28.1"
playwright = "1.45.0"
beautifulsoup4 = "4.12.3"
colour = "0.1.5"
emoji = "2.14.1"
emoji-data-python = "1.6.0"
Pillow = "11.1.0"
SQLAlchemy = {extras = ["asyncio"], version = "2.0.15"}
asyncpg = "0.29.0"
pydantic = "2.10.0"
pydantic-settings = "2.5.2"
pydantic-ai = "0.3.4"
google-generativeai = "0.3.2"
openai = "1.76.0"
anthropic = "0.52.0"
mcp = "1.10.1"
watchdog = "3.0.0"
crewai = "0.130.0"
faiss-cpu = "1.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
pytest-cov = "4.1.0"
pytest-mock = "3.11.1"
pytest-html = "3.2.0"
pytest-metadata = "3.0.0"
dpytest = "0.7.0"
pip-audit = "2.6.1"
bandit = "1.7.5"
isort = "5.12.0"
pylint = "2.17.4"
mypy = "1.4.1"
prettier = "0.0.7"
black = "23.3.0"
ruff = "0.1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "E402",  # Module level import not at top of file
    "F401",  # Unused imports in __init__.py files
    "F841",  # Local variable assigned but never used
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test_*.py" = ["E402"]
"conftest.py" = ["E402"]
"scripts/*" = ["E402"]
"tests/*" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true